--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@anio-fs/int--hash-file": "^4.0.0",
     "@anio-fs/int--read-file-in-chunks": "^3.0.1",
+    "@anio-fs/int--write-atomic-file": "^3.0.0",
     "@vipen/target-js": "^0.15.1",
     "vipen": "^0.2.1"
   },
