Move from vipen to fourtune.

--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@anio-fs/int--read-file-in-chunks": "^3.0.2",
     "@anio-fs/int--write-atomic-file": "^3.0.1",
     "@anio-fs/int--write-atomic-file-json": "1.0.0",
-    "@vipen/target-js": "0.17.0",
-    "vipen": "0.2.1"
+    "@fourtune/realm-js": "^0.1.0",
+    "fourtune": "^0.0.1"
   },
   "scripts": {
-    "prepare": "./node_modules/.bin/vipen ."
+    "prepare": "./node_modules/.bin/fourtune ."
   },
   "files": [
     "./dist/"
