--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type": "git",
     "url": "git+https://github.com/anio-fs-org/file.git"
   },
+  "type": "module",
   "devDependencies": {
     "@fourtune/core": "^0.1101.0",
     "@fourtune/realm-js": "^0.31000.2",
