--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "author": "Anio Software <info@anio.software>",
   "description": "Provides various file operations.",
   "license": "MIT",
+  "exports": {
+    ".": {
+      "types": "./dist/default/index.min.d.mts",
+      "import": "./dist/default/index.min.mjs"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/anio-fs-org/file.git"
