--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@anio-fs/file",
+  "name": "@aniojs/node-fs-file",
   "version": "0.0.0",
   "author": "Anio Software <info@anio.software>",
   "description": "Provides various file operations.",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/anio-fs-org/file.git"
+    "url": "git+https://github.com/aniojs-org/node-fs-file.git"
   },
   "type": "module",
   "devDependencies": {
