--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "@aniojs-private/node-async-sync-fs": "^0.2.0",
     "@fourtune/core": "^0.1101.0",
     "@fourtune/realm-js": "^0.31000.2",
     "fourtune": "^0.30000.0"
