--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@aniojs/node-fs-file",
-  "version": "0.3.2",
+  "name": "@anio-software/pkg.node-fs-file",
+  "version": "0.0.0",
   "author": "Anio Software <info@anio.software>",
   "description": "Provides various file operations.",
   "license": "MIT",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aniojs-org/node-fs-file.git"
+    "url": "git+https://github.com/anio-software/pkg.node-fs-file.git"
   },
   "type": "module",
   "devDependencies": {
