--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@anio-software/enkore.core": "^0.11.2",
     "@anio-software/enkore.target-js-node": "^0.0.254-canary-d8d99fc9-bcf63779",
     "@anio-software/pkg-private.node-fs-find-nearest-file": "^0.0.1",
+    "@anio-software/pkg.random-identifier": "^0.0.1",
     "@aniojs-private/node-async-sync-fs": "^0.3.0"
   }
 }
