Update project/.gitignore and add enkore-lock.json.

--- a/project/.gitignore
+++ b/project/.gitignore
@@ -18,3 +18,35 @@
 /src/writeAtomicFileJSONSync.ts
 /src/writeAtomicFile.ts
 /src/writeAtomicFileSync.ts
+/export/findNearestFileFactory.ts
+/export/findNearestFile.ts
+/export/findNearestFileSyncFactory.ts
+/export/findNearestFileSync.ts
+/export/hashFileFactory.ts
+/export/hashFile.ts
+/export/hashFileSyncFactory.ts
+/export/hashFileSync.ts
+/export/openFileFactory.ts
+/export/openFile.ts
+/export/openFileSyncFactory.ts
+/export/openFileSync.ts
+/export/readFileInChunksFactory.ts
+/export/readFileInChunks.ts
+/export/readFileInChunksSyncFactory.ts
+/export/readFileInChunksSync.ts
+/export/readFileJSONFactory.ts
+/export/readFileJSON.ts
+/export/readFileJSONSyncFactory.ts
+/export/readFileJSONSync.ts
+/export/readFileStringFactory.ts
+/export/readFileString.ts
+/export/readFileStringSyncFactory.ts
+/export/readFileStringSync.ts
+/export/writeAtomicFileJSONFactory.ts
+/export/writeAtomicFileJSON.ts
+/export/writeAtomicFileJSONSyncFactory.ts
+/export/writeAtomicFileJSONSync.ts
+/export/writeAtomicFileFactory.ts
+/export/writeAtomicFile.ts
+/export/writeAtomicFileSyncFactory.ts
+/export/writeAtomicFileSync.ts
